--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 workflows:
   version: 2
-  build-deploy:
+  deploy-master:
     jobs:
       - build:
           filters:
@@ -26,16 +26,34 @@ jobs:
           version: 20.10.7
 
       - run:
-          name: "Build Docker Image"
+          name: "Build and tag udagram-api-user Docker image"
+          command: |
+            docker build -t udagram-api-user ./udagram-api-user
+            docker tag udagram-api-user sudkul/udagram-api-user:v1
+
+      - run:
+          name: "Build and tag udagram-api-feed Docker image"
+          command: |
+            docker build -t udagram-api-feed ./udagram-api-feed
+            docker tag udagram-api-feed sudkul/udagram-api-feed:v1
+
+      - run:
+          name: "Build and tag udagram-frontend Docker image"
+          command: |
+            docker build -t udagram-frontend ./udagram-frontend
+            docker tag udagram-frontend sudkul/udagram-frontend:v1
+
+      - run:
+          name: "Build and tag udagram-reverseproxy Docker image"
           command: |
             docker build -t udagram-reverseproxy ./udagram-reverseproxy
-      - run:
-          name: "Tag Docker Image"
-          command: |
             docker tag udagram-reverseproxy sudkul/udagram-reverseproxy:v1
+
       - run:
-          name: "Push to Dockerhub"
+          name: "Push to Dockerhub mhieung/udagram-reverseproxy"
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+            docker push sudkul/udagram-api-user:v1
+            docker push sudkul/udagram-api-feed:v1
+            docker push sudkul/udagram-frontend:v1
             docker push sudkul/udagram-reverseproxy:v1
-
