--- a/deploy-config/env-secret.yaml
+++ b/deploy-config/env-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: env-secret
-data:
-  JWT_SECRET: testing
-  POSTGRES_PASSWORD: hieudevpostgress
+stringData:
+  JWT_SECRET: dGVzdGluZwo=
+  POSTGRES_PASSWORD: aGlldWRldnBvc3RncmVzcwo=
