--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,34 +26,35 @@ jobs:
           version: 20.10.7
 
       - run:
-          name: "Build and tag udagram-api-user Docker image"
+          name: "Build Docker images in parralel"
           command: |
-            docker build -t udagram-api-user ./udagram-api-user
-            docker tag udagram-api-user mhieung/udagram-api-user:v1
+            docker-compose -f ../docker-compose-build.yaml build --parallel
 
       - run:
-          name: "Build and tag udagram-api-feed Docker image"
+          name: "Tag udagram-api-user Docker image"
           command: |
-            docker build -t udagram-api-feed ./udagram-api-feed
-            docker tag udagram-api-feed mhieung/udagram-api-feed:v1
+            docker tag udagram-api-user mhieung/udagram-api-user:v2
 
       - run:
-          name: "Build and tag udagram-frontend Docker image"
+          name: "Tag udagram-api-feed Docker image"
           command: |
-            docker build -t udagram-frontend ./udagram-frontend
-            docker tag udagram-frontend mhieung/udagram-frontend:v1
+            docker tag udagram-api-feed mhieung/udagram-api-feed:v2
 
       - run:
-          name: "Build and tag udagram-reverseproxy Docker image"
+          name: "Tag udagram-frontend Docker image"
           command: |
-            docker build -t udagram-reverseproxy ./udagram-reverseproxy
-            docker tag udagram-reverseproxy mhieung/udagram-reverseproxy:v1
+            docker tag udagram-frontend mhieung/udagram-frontend:v2
 
       - run:
-          name: "Push to Dockerhub mhieung/udagram-reverseproxy"
+          name: "Tag udagram-reverseproxy Docker image"
+          command: |
+            docker tag udagram-reverseproxy mhieung/udagram-reverseproxy:v2
+
+      - run:
+          name: "Push to Dockerhub"
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-            docker push mhieung/udagram-api-user:v1
-            docker push mhieung/udagram-api-feed:v1
-            docker push mhieung/udagram-frontend:v1
-            docker push mhieung/udagram-reverseproxy:v1
+            docker push mhieung/udagram-api-user:v2
+            docker push mhieung/udagram-api-feed:v2
+            docker push mhieung/udagram-frontend:v2
+            docker push mhieung/udagram-reverseproxy:v2
