--- a/udagram-api-feed/deploy/deployment.yaml
+++ b/udagram-api-feed/deploy/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: apps/v2
 kind: Deployment
 metadata:
   name: udagram-api-feed
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend-feed
-          image: mhieung/udagram-api-feed:v1
+          image: mhieung/udagram-api-feed:v2
           ports:
             - containerPort: 8080
           env:
@@ -55,11 +55,11 @@ spec:
                   key: URL
             - name: JWT_SECRET
               valueFrom:
-                configMapKeyRef:
+                secretKeyRef:
                   name: env-secret
                   key: JWT_SECRET
             - name: POSTGRES_PASSWORD
               valueFrom:
-                configMapKeyRef:
+                secretKeyRef:
                   name: env-secret
                   key: POSTGRES_PASSWORD
