--- a/udagram-api-user/deploy/deployment.yaml
+++ b/udagram-api-user/deploy/deployment.yaml
@@ -1,9 +1,9 @@
-apiVersion: apps/v1
+apiVersion: apps/v2
 kind: Deployment
 metadata:
   name: udagram-api-user
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: udagram-api-user
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend-user
-          image: mhieung/udagram-api-user:v1
+          image: mhieung/udagram-api-user:v2
           resources:
             requests:
               memory: "2Gi"
@@ -62,11 +62,11 @@ spec:
                   key: URL
             - name: JWT_SECRET
               valueFrom:
-                configMapKeyRef:
+                secretKeyRef:
                   name: env-secret
                   key: JWT_SECRET
             - name: POSTGRES_PASSWORD
               valueFrom:
-                configMapKeyRef:
+                secretKeyRef:
                   name: env-secret
                   key: POSTGRES_PASSWORD
