--- a/udagram-reverseproxy/deploy/deployment.yaml
+++ b/udagram-reverseproxy/deploy/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udagram-reverseproxy
+  name: reverseproxy
 spec:
   replicas: 1
   selector:
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: reverseproxy
-          image: mhieung/udagram-reverseproxy:v2
+          image: mhieung/udagram-reverseproxy:v1
           ports:
             - containerPort: 8080
