--- a/deploy-config/env-secret.yaml
+++ b/deploy-config/env-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: Secret
+kind: ConfigMap
 metadata:
   name: env-secret
-stringData:
-  JWT_SECRET: dGVzdGluZwo=
-  POSTGRES_PASSWORD: aGlldWRldnBvc3RncmVzcwo=
+data:
+  JWT_SECRET: testing
+  POSTGRES_PASSWORD: hieudevpostgress
