--- a/udagram-api-user/deploy/deployment.yaml
+++ b/udagram-api-user/deploy/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udagram-api-user
+  name: backend-user
 spec:
   replicas: 2
   selector:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend-user
-          image: mhieung/udagram-api-user:v2
+          image: mhieung/udagram-api-user:v1
           resources:
             requests:
               memory: "2Gi"
@@ -62,11 +62,11 @@ spec:
                   key: URL
             - name: JWT_SECRET
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: env-secret
                   key: JWT_SECRET
             - name: POSTGRES_PASSWORD
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: env-secret
                   key: POSTGRES_PASSWORD
