--- a/udagram-frontend/deploy/deployment.yaml
+++ b/udagram-frontend/deploy/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udagram-frontend
+  name: frontend
 spec:
   replicas: 1
   selector:
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: mhieung/udagram-frontend:v2
+          image: mhieung/udagram-frontend:v1
           ports:
             - containerPort: 8100
