fix docker compose and deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,30 +31,30 @@ jobs:
             docker-compose -f ./docker-compose-build.yaml build --parallel
 
       - run:
-          name: "Tag udagram-api-user Docker image"
+          name: "Tag backend-user Docker image"
           command: |
-            docker tag udagram-api-user mhieung/udagram-api-user:v1
+            docker tag backend-user mhieung/backend-user:v1
 
       - run:
-          name: "Tag udagram-api-feed Docker image"
+          name: "Tag backend-feed Docker image"
           command: |
-            docker tag udagram-api-feed mhieung/udagram-api-feed:v1
+            docker tag backend-feed mhieung/backend-feed:v1
 
       - run:
-          name: "Tag udagram-frontend Docker image"
+          name: "Tag frontend Docker image"
           command: |
-            docker tag udagram-frontend mhieung/udagram-frontend:v1
+            docker tag frontend mhieung/frontend:v1
 
       - run:
-          name: "Tag udagram-reverseproxy Docker image"
+          name: "Tag reverseproxy Docker image"
           command: |
-            docker tag udagram-reverseproxy mhieung/udagram-reverseproxy:v1
+            docker tag reverseproxy mhieung/reverseproxy:v1
 
       - run:
           name: "Push to Dockerhub"
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-            docker push mhieung/udagram-api-user:v1
-            docker push mhieung/udagram-api-feed:v1
-            docker push mhieung/udagram-frontend:v1
-            docker push mhieung/udagram-reverseproxy:v1
+            docker push mhieung/backend-user:v1
+            docker push mhieung/backend-feed:v1
+            docker push mhieung/frontend:v1
+            docker push mhieung/reverseproxy:v1
