--- a/udagram-api-user/deploy/deployment.yaml
+++ b/udagram-api-user/deploy/deployment.yaml
@@ -6,15 +6,15 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: udagram-api-user
+      app: backend-user
   template:
     metadata:
       labels:
-        app: udagram-api-user
+        app: backend-user
     spec:
       containers:
         - name: backend-user
-          image: mhieung/udagram-api-user:v1
+          image: mhieung/backend-user:v1
           resources:
             requests:
               memory: "2Gi"
