--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: udagram-reverseproxy
+    image: reverseproxy
   backend_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user
+    image: backend-user
   backend_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed
+    image: backend-feed
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend
+    image: frontend
