--- a/udagram-api-feed/deploy/service.yaml
+++ b/udagram-api-feed/deploy/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: udagram-api-feed
+    service: backend-feed
   name: backend-feed
 spec:
   ports:
@@ -10,4 +10,4 @@ spec:
       port: 8080
       targetPort: 8080
   selector:
-    service: udagram-api-feed
+    service: backend-feed
