--- a/udagram-frontend/deploy/deployment.yaml
+++ b/udagram-frontend/deploy/deployment.yaml
@@ -6,14 +6,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: udagram-frontend
+      app: frontend
   template:
     metadata:
       labels:
-        app: udagram-frontend
+        app: frontend
     spec:
       containers:
         - name: frontend
-          image: mhieung/udagram-frontend:v1
+          image: mhieung/frontend:v1
           ports:
             - containerPort: 8100
