--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,13 @@ jobs:
             sudo mv /tmp/dockerize /usr/local/bin
 
       - setup_remote_docker:
-          version: 23.0.5
+          version: 20.10.7
 
       - run:
           name: "Build Docker images in parralel"
           command: |
+            docker -v
+            docker-compose -v
             docker-compose -f ./docker-compose-build.yaml build --parallel
 
       - run:
