--- a/deploy-config/env-secret.yaml
+++ b/deploy-config/env-secret.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: env-secret
+type: Opaque
 data:
-  JWT_SECRET: testing
-  POSTGRES_PASSWORD: hieudevpostgress
+  JWT_SECRET: dGVzdGluZw==
+  POSTGRES_USERNAME: aGlldWRldnBvc3RncmVzcw==
+  POSTGRES_PASSWORD: aGlldWRldnBvc3RncmVzcw==
