--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -2,17 +2,17 @@ version: "3"
 services:
   reverseproxy:
     build:
-      context: ./udagram-reverseproxy
+      context: ./udagram-reverseproxy:v1
     image: reverseproxy
   backend_user:
     build:
-      context: ./udagram-api-user
+      context: ./udagram-api-user:v1
     image: backend-user
   backend_feed:
     build:
-      context: ./udagram-api-feed
+      context: ./udagram-api-feed:v1
     image: backend-feed
   frontend:
     build:
       context: ./udagram-frontend
-    image: frontend
+    image: frontend:v1
