fix config circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,10 @@ jobs:
           name: "Build Docker images in parralel"
           command: |
             docker-compose -f ./docker-compose-build.yaml build --parallel
+
+      - run:
+          name: "echo docker images"
+          command: |
             docker images
 
       - run:
