--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,28 @@ jobs:
           version: 20.10.7
 
       - run:
-          name: "Build Docker images in parralel"
+          name: "Build and tag backend-user Docker image"
           command: |
-            docker-compose -f ./docker-compose-build.yaml build --parallel
+            docker build -t backend-user ./udagram-api-user
+            docker tag backend-user mhieung/backend-user:v1
+
+      - run:
+          name: "Build and tag backend-feed Docker image"
+          command: |
+            docker build -t backend-feed ./udagram-api-feed
+            docker tag backend-feed mhieung/backend-feed:v1
+
+      - run:
+          name: "Build and tag frontend Docker image"
+          command: |
+            docker build -t frontend ./udagram-frontend
+            docker tag frontend mhieung/frontend:v1
+
+      - run:
+          name: "Build and tag reverseproxy Docker image"
+          command: |
+            docker build -t reverseproxy ./udagram-reverseproxy
+            docker tag reverseproxy mhieung/reverseproxy:v1
 
       - run:
           name: "Push to Dockerhub"
