--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,12 +33,12 @@ jobs:
       - run:
           name: "Tag backend-user Docker image"
           command: |
-            docker tag backend-user mhieung/backend-user:v1
+            docker tag backend-user mhieung/backend-user:v2
 
       - run:
           name: "Tag backend-feed Docker image"
           command: |
-            docker tag backend-feed mhieung/backend-feed:v1
+            docker tag backend-feed mhieung/backend-feed:v2
 
       - run:
           name: "Tag frontend Docker image"
@@ -48,10 +48,13 @@ jobs:
       - run:
           name: "Tag reverseproxy Docker image"
           command: |
-            docker tag reverseproxy mhieung/reverseproxy:v1
+            docker tag reverseproxy mhieung/reverseproxy:v2
 
       - run:
           name: "Push to Dockerhub"
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+            docker push mhieung/backend-user:v2
+            docker push mhieung/backend-feed:v2
             docker push mhieung/frontend:v6
+            docker push mhieung/reverseproxy:v2
