--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,6 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   frontend:
-    image: frontend:v3
+    image: frontend
     ports:
       - "8100:80"
