--- a/deploy-config/env-configmap.yaml
+++ b/deploy-config/env-configmap.yaml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: env-configmap
 data:
-  POSTGRES_HOST: hieudevpostgress.cad4oj2nucpu.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: hieudevpostgress.cs85cfzix4k4.us-east-1.rds.amazonaws.com
   POSTGRES_DB: postgres
-  AWS_BUCKET: test-010440084304-dev
+  AWS_BUCKET: postgressdb-369341308689-dev
   AWS_REGION: us-east-1
   AWS_PROFILE: default
   URL: http://localhost:8100
