--- a/udagram-api-user/deploy/deployment.yaml
+++ b/udagram-api-user/deploy/deployment.yaml
@@ -17,6 +17,11 @@ spec:
           image: mhieung/backend-user:v1
           ports:
             - containerPort: 8080
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 200m
           env:
             - name: AWS_BUCKET
               valueFrom:
